<resources>
    <string name="app_name">FileDrop</string>
    <string name="tab_upload">发送</string>
    <string name="tab_accept">接收</string>
    <string name="tab_history">历史记录</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="refresh_list">刷新列表</string>
    <string name="connect_to">连接</string>
    <string name="none_connected_device">当前无连接设备</string>
    <string name="home">主页</string>
    <string name="connect_device_right_now">连接设备</string>
    <string name="accept">接收</string>
    <string name="send">发送</string>
    <string name="qr_notice">发送方扫描此二维码以连接</string>
    <string name="set_storage_path">设置存储路径</string>
    <string name="clear_history">清空历史</string>
    <string name="size_prefix">大小</string>
    <string name="logo">logo</string>
    <string name="go_to_receive_nan">连接不上?尝试临近网络感知</string>
    <string name="refresh_qrcode">刷新二维码</string>
    <string name="connecting">连接中</string>
    <string name="connected_to">已连接到</string>
    <string name="choose_file">选择文件</string>
    <string name="file_sending">文件发送中</string>
    <string name="disconnect">断开连接</string>
    <string name="app_short_intro">使用WiFi传输你的数据</string>
    <string name="scan_to_connect">扫描以连接</string>
    <string name="waiting_for_peer_sending">等待对方发送文件</string>
    <string name="file_receiving">文件接收中</string>
    <string name="file_received">文件已接收</string>
    <string name="file_receive_failed">文件接收失败</string>
    <string name="qrcode_invalidate">二维码失效</string>
    <string name="detail">详情</string>
    <string name="delete">删除</string>
    <string name="file_name">文件名</string>
    <string name="file_size">文件大小</string>
    <string name="device">设备</string>
    <string name="file_type">文件类型</string>
    <string name="transmission_type">传输类型</string>
    <string name="transmission_timestamp">传输时间</string>
    <string name="deleted">已删除</string>
    <string name="cancel_accept">取消接收</string>
    <string name="reject_accept">拒绝接收</string>
    <string name="file_damaged">文件损坏！</string>
    <string name="file_preview">文件预览</string>
    <string name="not_found_app_can_open_document">找不到用于打开此文件的应用</string>
    <string name="set_file_saving_location">设置接收文件路径</string>
    <string name="file_saving_location_not_set">暂未设置保存路径</string>
    <string name="please_set_file_saving_location">请设置文件保存路径</string>
    <string name="file_saving_location">文件保存路径</string>
    <string name="set_failure">设置失败</string>
    <string name="is_sure_clear">是否清空</string>
    <string name="action_cannot_rollback">操作不可逆</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
</resources>