<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.receive.ReceiveFragment"
    android:padding="@dimen/app_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_pair"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_qr_notice"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/tv_qr_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:text="@string/qr_notice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_server_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_qrcode"
            tools:text="服务" />


        <Button
            style="@style/AppTheme.Button"
            android:id="@+id/btn_refresh_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh_qrcode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_set_file_saving_location"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/set_file_saving_location"
            app:layout_constraintBottom_toTopOf="@+id/btn_refresh_qrcode"
            tools:layout_editor_absoluteX="144dp" />

        <TextView
            android:id="@+id/tv_file_saving_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_padding"
            android:textAlignment="center"
            tools:text="当前未设置保存路径"
            app:layout_constraintBottom_toTopOf="@+id/btn_set_file_saving_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
