<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".pages.send.SendFileActivity">

    <!--连接中-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/widgets_connecting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp">

        <ProgressBar
            android:id="@+id/progressBar_connecting"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminateTint="@color/design_default_color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_connecting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar_connecting"
            app:layout_constraintEnd_toEndOf="@+id/progressBar_connecting"
            app:layout_constraintStart_toStartOf="@+id/progressBar_connecting"
            app:layout_constraintTop_toTopOf="@+id/progressBar_connecting" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--连接后，发送前-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/widgets_before_file_send"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!-- 连接到XXX -->
        <TextView
            android:id="@+id/tv_connected_to"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="已连接到XXX" />

        <ImageView
            android:id="@+id/iv_circle_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/app_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_connected_to"
            app:layout_constraintWidth_percent="0.7"
            app:srcCompat="@drawable/round_selector" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_circle_bg"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="@id/iv_circle_bg"
            app:layout_constraintStart_toStartOf="@id/iv_circle_bg"
            app:layout_constraintTop_toTopOf="@id/iv_circle_bg"
            app:layout_constraintWidth_percent="0.4"
            app:srcCompat="@drawable/send" />

        <Button
            android:id="@+id/btn_choose_file"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--发送中-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/widgets_file_sending"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator_sending"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/app_padding"
            android:max="100"
            android:progress="0"
            app:indicatorSize="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />


        <TextView
            android:id="@+id/tv_file_sending"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_sending"
            app:layout_constraintEnd_toEndOf="@id/progress_indicator_sending"
            app:layout_constraintStart_toStartOf="@id/progress_indicator_sending"
            app:layout_constraintTop_toBottomOf="@id/tv_send_progress" />


        <TextView
            android:id="@+id/tv_send_progress"
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_font_size"
            app:layout_constraintBottom_toBottomOf="@id/progress_indicator_sending"
            app:layout_constraintEnd_toEndOf="@id/progress_indicator_sending"
            app:layout_constraintStart_toStartOf="@id/progress_indicator_sending"
            app:layout_constraintTop_toTopOf="@id/progress_indicator_sending"
            tools:text="50%" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>